--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@angular/platform-browser": "^20.1.2",
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
+    "@primeuix/themes": "^1.2.1",
     "esbuild": "^0.25.8",
+    "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
