--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               }
             ],
             "styles": [              
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@ctrl/ngx-emoji-mart/picker.css"
             ],
             "scripts": []
           },
