--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^20.1.2",
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@primeuix/themes": "^1.2.1",
     "esbuild": "^0.25.8",
     "primeng": "^20.0.0",
